- added BCrypt for password hashing

--- a/security/pom.xml
+++ b/security/pom.xml
@@ -33,6 +33,13 @@
             <artifactId>javax.security.enterprise</artifactId>
             <version>1.0-b11</version>
         </dependency>
+        
+        <!-- Password Hashing -->
+        <dependency>
+            <groupId>org.mindrot</groupId>
+            <artifactId>jbcrypt</artifactId>
+            <version>0.4</version>
+        </dependency>
     </dependencies>
     
     <build>
