--- a/security/pom.xml
+++ b/security/pom.xml
@@ -72,13 +72,16 @@
                                     <goal>update</goal>
                                 </goals>
                                 <configuration>
-                                    <propertyFile>target/classes/conf/liquibase.properties</propertyFile>
-                                    <propertyFileWillOverride>true</propertyFileWillOverride>
+                                    <driver>org.postgresql.Driver</driver>
+                                    <url>jdbc:postgresql://172.18.0.2:5432/microserv</url>
                                     <username>${dbuser}</username>
                                     <password>${dbpass}</password>
                                     <changeLogFile>src/main/resources/db/changelog.xml</changeLogFile>
                                     <changelogSchemaName>security</changelogSchemaName>
                                     <defaultSchemaName>security</defaultSchemaName>
+                                    <verbose>true</verbose>
+                                    <dropFirst>false</dropFirst>
+                                    <promptOnNonLocalDatabase>false</promptOnNonLocalDatabase>
                                 </configuration>
                             </execution>
                         </executions>
