--- a/servicetwo/pom.xml
+++ b/servicetwo/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.github.nderwin.micro-playground</groupId>
     <artifactId>servicetwo</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <packaging>war</packaging>
 
     <properties>
