--- a/security/pom.xml
+++ b/security/pom.xml
@@ -2,6 +2,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     
+    <parent>
+        <groupId>com.github.nderwin.micro-playground</groupId>
+        <artifactId>micro-parent</artifactId>
+        <version>1.1.0-SNAPSHOT</version>
+        <relativePath>../</relativePath>
+    </parent>
+    
     <groupId>com.github.nderwin.micro-playground</groupId>
     <artifactId>security</artifactId>
     <version>1.1.0-SNAPSHOT</version>
