Task #13 - Rename the Liquibase profile Fixes #13
- renamed the profile for updating the database with Liquibase

--- a/security/pom.xml
+++ b/security/pom.xml
@@ -120,7 +120,7 @@
             <activation>
                 <activeByDefault>false</activeByDefault>
             </activation>
-            <id>update-dev-database</id>
+            <id>update-database</id>
             <build>
                 <plugins>
                     <plugin>
