--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,6 +35,7 @@ services:
             POSTGRES_PASSWORD_FILE: /run/secrets/postgres_password
             POSTGRES_DB: microserv
         volumes:
+          - ./database:/var/lib/postgresql/data
           - ./init.sql:/docker-entrypoint-initdb.d/init.sql
         ports:
           - "5432:5432"
