Task #20 - Add a health check to the REST services Fixes #20
- reworked the CMD scripts to trap the SIGTERM signal and call the CLI to stop the Wildfly containers
- simplified the CMD entry in the Dockerfiles

--- a/security/Dockerfile
+++ b/security/Dockerfile
@@ -31,4 +31,4 @@ EXPOSE	8080 9990
 
 HEALTHCHECK CMD curl -f http://security:8080/security/resources/health
 
-CMD     ["/opt/wildfly/wait-for-database.sh", "microservdb", "5432", "/opt/wildfly/bin/standalone.sh", "-b", "0.0.0.0", "-bmanagement", "0.0.0.0"]
+CMD     ["/opt/wildfly/wait-for-database.sh"]
