--- a/security/pom.xml
+++ b/security/pom.xml
@@ -5,13 +5,13 @@
     <parent>
         <groupId>com.github.nderwin.micro-playground</groupId>
         <artifactId>micro-parent</artifactId>
-        <version>1.1.0-SNAPSHOT</version>
+        <version>1.1.0</version>
         <relativePath>../</relativePath>
     </parent>
     
     <groupId>com.github.nderwin.micro-playground</groupId>
     <artifactId>security</artifactId>
-    <version>1.1.0-SNAPSHOT</version>
+    <version>1.1.0</version>
     <packaging>war</packaging>
 
     <properties>
