- updated the README - added the secrets mapping to the security service - changed the run script and the Dockerfile to wait until Wildfly is running before using the CLI to deploy the JDBC driver, create the datasource, and deploy the app war

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,9 @@ services:
         ports:
           - "8080:8080"
           - "9990:9990"
+        secrets:
+          - postgres_username
+          - postgres_password
     microservdb:
         image: postgres:9.6.3
         container_name: microservdb
