--- a/serviceone/pom.xml
+++ b/serviceone/pom.xml
@@ -3,13 +3,13 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>com.github.nderwin.micro-playground</groupId>
+        <groupId>com.e-gineering.micro-playground</groupId>
         <artifactId>micro-parent</artifactId>
         <version>1.2.0-SNAPSHOT</version>
         <relativePath>../</relativePath>
     </parent>
     
-    <groupId>com.github.nderwin.micro-playground</groupId>
+    <groupId>com.e-gineering.micro-playground</groupId>
     <artifactId>serviceone</artifactId>
     <version>1.2.0-SNAPSHOT</version>
     <packaging>war</packaging>
@@ -61,7 +61,7 @@
                 <configuration>
                     <images>
                         <image>
-                            <name>nderwin/%a:%v</name>
+                            <name>egineering-llc/%a:%v</name>
                             <build>
                                 <dockerFileDir>${project.basedir}</dockerFileDir>
                             </build>
